2011-02-22  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* make lighthisto.py aware of 2D histograms

2011-02-21  Andy Buckley  <andy@insectnation.org>

	* Adding PDF documentation for path searching and .info/.plot
	files, and tidying overfull lines.

	* Removing unneeded const declarations from various return by
	value path and internal binning functions. Should not affect ABI
	compatibility but will force recompilation of external packages
	using the RivetPaths.hh and Utils.hh headers.

	* Adding findAnalysis*File(fname) functions, to be used by Rivet
	scripts and external programs to find files known to Rivet
	according to Rivet's (newly standard) lookup rule.

	* Changing search path function behaviour to always return *all*
	search directories rather than overriding the built-in locations
	if the environment variables are set.

2011-02-20  Andy Buckley  <andy@insectnation.org>

	* Adding the ATLAS 2011 transverse jet shapes analysis.

2011-02-18  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Support for transparency in make-plots

2011-02-18  Frank Siegert <frank.siegert@cern.ch>

	* Added ATLAS prompt photon analysis ATLAS_2010_S8914702

2011-02-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Simple NOOP constructor for Thrust projection

	* Add CMS event shape analysis. Data read off the plots. We
	will get the final numbers when the paper is accepted by
	the journal.

2011-02-10  Frank Siegert <frank.siegert@cern.ch>

	* Add final version of ATLAS dijet azimuthal decorrelation

2011-02-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* remove ATLAS conf note analyses for which we have final data
	* reshuffle histograms in ATLAS minbias analysis to match Hepdata
	* small pT-cut fix in ATLAS track based UE analysis

2011-01-31  Andy Buckley  <andy@insectnation.org>

	* Doc tweaks and adding cmp-by-|p| functions for Jets, to match
	those added by Hendrik for Particles.

	* Don't sum photons around muons in the D0 2010 Z pT analysis.
