@@ -9,6 +9,7 @@ namespace HepMC {
   class IO_GenEvent;
 }
 
+
 namespace Rivet {
 
 
@@ -33,6 +34,9 @@ namespace Rivet {
 
     /// Get the cross-section for this run.
     Run& setCrossSection(const double xs);
+
+    /// Get the current cross-section from the analysis handler in pb.
+    double crossSection() const;
 
     /// Declare whether to list available analyses
     Run& setListAnalyses(const bool dolist);
