@@ -136,6 +136,7 @@ namespace Rivet {
     void finalize();
     bool needCrossSection();
     AnalysisHandler& setCrossSection(double xs);
+    double crossSection();
     void commitData();
     void writeData(const std::string& filename);
   };
